[package]
name = "rustdb"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
crossbeam-queue = "0.3.12"
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.10.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.108.0"